--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <body>
     <input type="text" name="" value="" >
     <button type="submit" name="button" onclick="oreomake()">makeoreo</button>
+    <button type="submit" name="button" onclick="changeSize()">choose cream</button>
 <script src="main.js" charset="utf-8"></script>
   </body>
 </html>
